--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,4 @@ python:
 install:
   - pip install -r requirements.txt
 script:
-  - pytest
+  - "pytest --cov-report term --cov-report xml:coverage-reports/coverage-report.xml --cov=."
